docs(#2869): trino-connector README — self-contained fat jar section, directory-not-jar correction